API Response deleted and changed to ResponseEntity

--- a/SpringProject/src/main/resources/application.yaml
+++ b/SpringProject/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/springdb?useSSL=false
-    username: Krisztina
-    password: MySql1234.
+    username: root
+    password: Delfin456.
 
   #JPA Settings
   jpa.hibernate.ddl-auto: update
